@@ -1,3 +1,4 @@
+- install nonfree firmware for amdgpu, i915, nouveau
 - CSD:
   o make corners round like gtk+/Adwaita does
   o nicer decoration
