@@ -1,3 +1,5 @@
+- install nonfree firmware for amdgpu, i915, nouveau
+
 Version 17.29 - 4 May 2016
 
 - localedrake:
